<resources>
    <string name="app_name">Hello Jesus</string>

    <!-- String Menu  -->
    <string name="main_menu">English curse</string>
    <string name="item_credit">Vercículo/Anúncios</string>
    <string name="item_about">Sobre</string>

    <!-- String Tab Fragment  -->
    <string name="category_bible">Bible</string>
    <string name="category_music">Music</string>
    <string name="category_interpretation">Ask</string>
    <string name="category_exercise">Exercise</string>
    <string name="category_write">Write</string>

    <!-- String For Button  -->
    <string name="button_translate">Translate</string>
    <string name="button_explanation">Explanation</string>
    <string name="button_images">Images</string>

    <!-- String For Play Audio  -->
    <string name="notification_text">Control for Audio!</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>


    <!-- String For Other  -->
    <string name="listening">No listening. Wait...  </string>
    <string name="writing">Write here.</string>
    <string name="permission_message">This app needs to record audio and recognize your speech.</string>
    <string name="verses">Verses</string>
    <string name="phases">Phases</string>
    <string name="exercises">Exercises</string>
    <string name="words">Words</string>
    <string name="seconds">sec</string>

    <string name="total">Total</string>
    <string name="total_said">Said</string>
    <string name="total_mistake">Mistake</string>
    <string name="total_correct">Correct</string>
    <string name="total_missing">Missing</string>

    <string name="format_until">" / "</string>

    <!-- String Tab Fragment  -->
    <string name="key_bible">Bible</string>
    <string name="key_music">Music</string>
    <string name="key_music_write">Music write</string>
    <string name="key_music_said">Music said</string>
    <string name="key_interpretation">Ask</string>
    <string name="key_exercise">Exercise</string>
    <string name="key_write">WRITE</string>

    <string name="msg_error_return">Erro nesta operação.</string>
    <string name="msg_next_return">Próxima operação.</string>

    <string name="msg_success_return_update">Atualizado com sucesso!</string>
    <string name="msg_success_return_delete">Deletado com sucesso!</string>
    <string name="msg_success_return_insert">Adicionado com sucesso!</string>


    <string name="menu_circle_color">Color</string>
    <string name="menu_circle_family">Family</string>
    <string name="menu_circle_drinks">Drinks</string>
    <string name="menu_circle_food">Food</string>
    <string name="menu_circle_fruit">Fruit</string>
    <string name="menu_circle_body_parts">Body parts</string>

    <string name="menu_circle_occupations">Occupations</string>
    <string name="menu_circle_transports">Transports</string>
    <string name="menu_circle_mobile">Mobile</string>
    <string name="menu_circle_wild_animals">Wild animals</string>
    <string name="menu_circle_sports">Sports</string>
    <string name="menu_circle_vegetables">Vegetables</string>
    <string name="menu_circle_places">Places</string>
    <string name="menu_circle_rooms_of_the_house">Rooms of the House</string>
    <string name="menu_circle_nationality">Nationality</string>
    <string name="menu_circle_clothes">Clothes</string>
    <string name="menu_circle_diseases">Diseases</string>
    <string name="menu_circle_musical_instruments">Musical instruments</string>
    <string name="menu_circle_numbers">Numbers</string>
    <string name="menu_circle_religious_terms">Religious Terms</string>
    <string name="menu_circle_important_words">Important_words</string>

    <string name="title_words_correct">I learned</string>
    <string name="title_words_wrong">I do not know</string>
    <string name="title_words"> words</string>

    <string name="fab_i_do_know">I do not know these words</string>
    <string name="fab_i_know">I learned these words</string>
    <string name="fab_dictionary">Dictionary</string>
    <string name="fab_help">I need help</string>

    <string name="ad_start">Iniciada em</string>
    <string name="ad_end">Finalizado em</string>

    <string name="create">Crie sua conta</string>
    <string name="login_login">LOGIN</string>
    <string name="login_e_mail">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_password">Confirm password</string>
    <string name="login_not_exist">Usuário não cadastrado ou senha inválida! ou Verifique a internet!</string>
    <string name="login_null">Entre com usuario e senha!</string>
    <string name="login_email_null">Entre com e-mail cadastrado!</string>
    <string name="login_email_send">E-mail enviado com sucesso!</string>
    <string name="dont_have_an_account">Você tem uma conta?</string>
    <string name="create_account">Criar conta!</string>
    <string name="forget_password">Esqueci senha!</string>
    <string name="enter_information">Entre com as informações para criar uma conta</string>


    <string name="mensagem01">Deseja sair da aplicação</string>

    <string name="preference_key_email">preference_key_email</string>
    <string name="preference_key_password">preference_key_password</string>

    <string name="preference_key_bible">preference_key_bible</string>

</resources>
