<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.jorge.hellojesus.speech.progress.ProgressActivity">

    <RelativeLayout
        android:id="@+id/rl_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:visibility="visible"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/circular_progress_view" />

        <TextView
            android:id="@+id/tv_count_speech"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:text="1"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="55sp" />

        <TextView
            android:id="@+id/tv_speech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_count_speech"
            android:layout_marginTop="30dp"
            android:text="@string/total"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="20sp"/>




    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:id="@+id/rl_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
>


            <TextView
                android:id="@+id/tv_count_correct"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_textview_border"
                android:gravity="center"
                android:text="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_correct"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_count_correct"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:text="@string/total_correct"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_mistake"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_count_mistake"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_textview_border"
                android:gravity="center"
                android:text="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_mistake"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_count_mistake"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/total_mistake"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_said"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_count_said"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_textview_border"
                android:gravity="center"
                android:text="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/tv_said"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_count_said"
                android:layout_marginTop="30dp"
                android:text="@string/total_said"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:textSize="15sp"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_missing"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_count_missing"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_textview_border"
                android:gravity="center"
                android:text="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_missing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_count_missing"
                android:layout_marginTop="30dp"
                android:text="@string/total_missing"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="15sp"/>

        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
