<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ad.AdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">



        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/contentFrame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/multiple_actions_down"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:menu_fab_label="Choose an action"
                app:fab_colorNormal="@color/color_login_button"
                app:fab_colorPressed="@color/color_login_buttonpress"

                app:fab_showShadow="true"
                app:menu_icon="@drawable/ic_add_circle_outline_white_24dp"
                app:menu_labels_colorNormal="#333333"
                app:menu_labels_colorPressed="#444444"
                app:menu_labels_colorRipple="#66FFFFFF"
                app:menu_labels_showShadow="true"
                app:menu_labels_maxLines="-1"
                app:menu_labels_position="left"
                app:menu_openDirection="up"
                android:paddingRight="30dp"
                app:menu_labels_ellipsize="end"
                app:menu_labels_singleLine="true"
                app:layout_anchorGravity="end|right|bottom">


                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_no_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_no_check"
                    android:layout_margin="15dp"
                    android:scaleType="fitCenter"
                    app:fab_label="@string/fab_i_do_know"
                    app:fab_size="normal"/>

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_write"
                    android:layout_margin="15dp"
                    android:scaleType="fitCenter"
                    app:fab_label="@string/fab_i_know"
                    app:fab_size="normal" />

                <!--                <com.github.clans.fab.FloatingActionButton
                                    android:id="@+id/fab_word"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@mipmap/ic_word"
                                    android:layout_margin="15dp"
                                    android:scaleType="fitCenter"
                                    app:fab_label="@string/fab_dictionary"
                                    app:fab_size="normal"  />-->

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_help"
                    android:layout_margin="15dp"
                    android:scaleType="fitCenter"
                    app:fab_label="@string/fab_help"
                    app:fab_size="normal" />

            </com.github.clans.fab.FloatingActionMenu>

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_text_view"
                android:layout_gravity="left|bottom"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="8dp"
                android:src="@mipmap/ic_close"/>


        </android.support.design.widget.CoordinatorLayout>

    </LinearLayout>





</android.support.v4.widget.DrawerLayout>
